--- a/A-nice-notebook.ipynb
+++ b/A-nice-notebook.ipynb
@@ -12,24 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a02c6c9e-0112-4761-8a54-c9b0a83b25a0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtest\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
      ]
     }
    ],
    "source": [
-    "print(test)"
+    "print(\"test\")"
    ]
   },
   {
